# ArdanUltimateRust

./: .gitignore  Cargo.toml  README.md
session1/authentication/: Cargo.toml
session1/authentication/src/: lib.rs
session1/login/: Cargo.toml  users.json
session1/login/src/: main.rs
session1/login_manager/: Cargo.toml  users.json
session1/login_manager/src/: main.rs
session1/variables/src/: main.rs
session2/affinity/: Cargo.toml
session2/channels1/src/: main.rs
session2/channels2/: Cargo.toml
session2/channels2/src/: main.rs
session2/deadlocks/src/: main.rs
session2/divide_work/src/: main.rs
session2/footgun/src/: main.rs
session2/hello/src/: main.rs
session2/mutexes/src/: main.rs
session2/parking/src/: main.rs
session2/rayon_iters/src/: main.rs
session2/rayon_scopes/src/: main.rs
session2/rwlocks/: Cargo.toml
session2/rwlocks/src/: main.rs
session2/scoped_threads/src/: main.rs
session2/thread_builder/src/: main.rs
session2/tprio/: Cargo.toml
session2/tprio/src/: main.rs
session2/workers/src/: main.rs
session2/workers2/: Cargo.toml
session2/workers2/src/: main.rs
session3/async_mutex/: Cargo.toml
session3/async_mutex/src/: main.rs
session3/blocking/: Cargo.toml
session3/blocking/src/: main.rs
session3/broadcast/: Cargo.toml
session3/broadcast/src/: main.rs
session3/channels/: Cargo.toml
session3/channels/src/: main.rs
session3/db/: Cargo.toml  hello_db.db
session3/db/migrations/: 20251106190201_initial.sql
session3/db/src/: main.rs
session3/errors/: Cargo.toml
session3/errors/src/: main.rs
session3/errors_async/: Cargo.toml
session3/errors_async/src/: main.rs
session3/fileio/: Cargo.toml
session3/fileio/src/: main.rs
session3/hello_async/src/: main.rs
session3/hello_tokio/: Cargo.toml
session3/hello_tokio/src/: main.rs
session3/recursion/: Cargo.toml
session3/recursion/src/: main.rs
session3/restclient/: Cargo.toml
session3/restclient/src/: main.rs
session3/select_channels/: Cargo.toml
session3/select_channels/src/: main.rs
session3/select_timeout/: Cargo.toml
session3/select_timeout/src/: main.rs
session3/tcpserver/: Cargo.toml
session3/tcpserver/src/: main.rs
session3/thumbnail_server/: Cargo.toml  images.db-shm  images.db-wal
session3/thumbnail_server/migrations/: 20251110192438_initial.sql
session3/thumbnail_server/src/: index.html  main.rs  redirect.html  search.html
session3/tokio_console/: Cargo.toml
session3/tokio_console/src/: main.rs
session3/tokio_testing/: Cargo.toml
session3/tokio_testing/src/: lib.rs
session3/tokio_tracing/: Cargo.toml
session3/tokio_tracing/src/: main.rs
session3/web_service/: Cargo.toml
session3/web_service/src/: hello.html  main.rs
session4/atomicrefcount/: Cargo.toml
session4/atomicrefcount/src/: main.rs
session4/bytes/: Cargo.toml
session4/bytes/src/: main.rs
session4/bytes2/: Cargo.toml
session4/bytes2/src/: main.rs
session4/c_rust/: Cargo.toml  build.rs
session4/c_rust/src/: lib.rs
session4/dropping/src/: main.rs
session4/external_arc_mutex/: Cargo.toml
session4/generics/src/: main.rs
session4/hashmap_bucket/: Cargo.toml
session4/hashmap_bucket/src/: main.rs
session4/internal_arc_mutex/: Cargo.toml
session4/internal_arc_mutex/src/: main.rs
session4/iterator_generator/: Cargo.toml
session4/iterator_generator/src/: main.rs
session4/linked_list_weak/: Cargo.toml
session4/memory/: Cargo.toml
session4/memory/src/: main.rs
session4/operator_overload/: Cargo.toml
session4/refcount/: Cargo.toml
session4/rust_c/: Cargo.toml  build.rs
session4/trait_generic/: Cargo.toml
session5/collector/: Cargo.toml  uuid
session5/server/: Cargo.toml  collection.db  collection.db-shm  collection.db-wal
session5/server/src/: api.rs  collector.html  collector.rs  main.rs
session5/shared_data/: Cargo.toml
(+14 files in other folders)
