[package]
name = "ArdanUltimateRust"
version = "0.1.0"
edition = "2024"

[dependencies]

[workspace]
members = [
  "session1/authentication",
  "session1/hello_world",
  "session1/login",
  "session1/login_manager",
  "session1/variables",
  "session2/affinity",
  "session2/channels1",
  "session2/channels2",
  "session2/dashing",
  "session2/deadlocks",
  "session2/divide_work",
  "session2/footgun",
  "session2/hello",
  "session2/mutexes",
  "session2/parking",
  "session2/rwlocks",
  "session2/scoped_threads",
  "session2/thread_builder",
  "session2/tprio",
  "session2/workers",
  "session2/workers2",
]
