[package]
name = "ArdanUltimateRust"
version = "0.1.0"
edition = "2024"

[dependencies]

[workspace]
members = [
  "session1/authentication",
  "session1/hello_world",
  "session1/login",
  "session1/login_manager",
  "session1/variables",
  "session2/affinity",
  "session2/channels1",
  "session2/channels2",
  "session2/dashing",
  "session2/deadlocks",
  "session2/divide_work",
  "session2/footgun",
  "session2/hello",
  "session2/mutexes",
  "session2/parking",
  "session2/rayon_iters",
  "session2/rayon_scopes",
  "session2/rwlocks",
  "session2/scoped_threads",
  "session2/thread_builder",
  "session2/tprio",
  "session2/workers",
  "session2/workers2",
  "session3/async_mutex",
  "session3/blocking",
  "session3/broadcast",
  "session3/channels",
  "session3/db",
  "session3/errors",
  "session3/errors_async",
  "session3/fileio",
  "session3/hello_async",
  "session3/hello_tokio",
  "session3/recursion",
  "session3/restclient",
  "session3/select_channels",
  "session3/select_timeout",
  "session3/tcpserver",
  "session3/thumbnail_server",
  "session3/tokio_console",
  "session3/tokio_testing",
  "session3/tokio_tracing",
  "session3/web_service",
  "session4/atomicrefcount",
  "session4/bytes",
  "session4/bytes2",
  "session4/c_rust",
  "session4/dropping",
  "session4/external_arc_mutex",
  "session4/generics",
  "session4/hashmap_bucket",
  "session4/internal_arc_mutex",
  "session4/iterator_generator",
  "session4/lifetimes",
  "session4/linked_list",
  "session4/linked_list_weak",
  "session4/memory",
  "session4/operator_overload",
  "session4/refcell",
  "session4/refcount",
  "session4/rust_c",
  "session4/smart_ptr",
  "session4/trait_generic",
  "session4/traits",
  "session5/collector",
  "session5/server",
  "session5/shared_data",
]
